2002-01-11  Mo DeJong  <mdejong@users.sourceforge.net>

	Use ${libdir} instead of ${exec_prefix}/lib. [Tcl bug 489370]
	
	* unix/configure: Regen.
	* unix/configure.in: Define and use libdir.
	* win/configure: Regen.
	* win/configure.in: Define libdir.

2002-01-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/Makefile.in: Burn Tcl and Tk build
	directories into tktest executable to avoid crashes
	caused by ld loading a previously installed version
	of the tcl or tk shared libraries. Remove setting
	of LD_LIBRARY_PATH, LIBPATH, and SHLIB_PATH
	before running tktest since it should no
	longer be required.

2002-01-11  Mo DeJong  <mdejong@users.sourceforge.net>

	Enable use of Tcl stubs when building Tk as
	a shared library. This should fix the build
	under AIX. [Bugs 220858, 220955, 220921]

	* unix/Makefile.in: Add TCL_STUB_LIB_SPEC and
	TCL_STUB_LIB_FLAG variables.
	* unix/configure: Regen.
	* unix/configure.in: Pass TCL_STUB_LIB_SPEC into
	Makefile and use it when linking the tk shared library.
	Define USE_TCL_STUBS when building shared. Subst
	TCL_STUB_LIB_SPEC and TCL_STUB_LIB_FLAG.

2002-01-08  D. Richard Hipp  <drh@hwaci.com>

	* win/tkWinMenu.c: Fix the following bug: If you select an entry
	on a cascade menu then the next time the parent menu is posted, the
	cascade entry was active.  Also, if you traverse to a disabled entry
	using keystrokes and press ENTER on the disabled entry, then that
	entry appears active the next time the menu is posted.  The same
	patch fixes both problems.

2002-01-04  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkBind.c (TkBindFree):
	* generic/tkGrid.c (ResolveConstraints,CheckSlotData,DestroyGrid):
	* generic/tkSelect.c (Tk_DeleteSelHandler,TkSelDeadWindow): Replaced
	Tcl_Free calls with ckfree so that memory debugging is fully supported.

2001-12-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* test/winButton.test:
	* win/tkWinButton.c: added updated patch #463234 which returns the